src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Address_Key__c</fullName>
        <formula>UPPER( Street ) +  UPPER( City)  +  UPPER( State)  +  UPPER( PostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Community_Program__c</fullName>
        <label>Affiliate Community Program</label>
        <picklist>
            <picklistValues>
                <fullName>CUNY/Pepsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Atlantic City Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D BG&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D ConEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Connecticut L&amp;P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Delmarva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D JCP&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D National Grid MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D NSTAR MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Pacific Gas &amp; Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D PEPCO MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D PSEG NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D SCE - 10B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D United Illuminating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE Delmarva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE Houston Employee Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucester Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Energy Solar Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwalk CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Sagewell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize SecondChance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize VCCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op VA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affordability__c</fullName>
        <description>Can the customer afford a solar installation?</description>
        <inlineHelpText>Can the customer afford a solar installation?</inlineHelpText>
        <label>Affordability</label>
        <picklist>
            <controllingField>Own_vs_Lease__c</controllingField>
            <picklistValues>
                <fullName>Probably</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May Not Be Able</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can Clearly Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probably Can’t Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_Field_Sales__c</fullName>
        <description>Assignable Field Sales Reps for Scheduling Sales Visits</description>
        <inlineHelpText>Assignable Field Sales Reps for Scheduling Sales Visits</inlineHelpText>
        <label>Available Field Sales</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Bill__c</fullName>
        <description>Field created for 1-800-MY Web to Lead form</description>
        <label>Average Monthly Bill</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <inlineHelpText>Best time to contact the lead</inlineHelpText>
        <label>Best Time to Call</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculator_Average_Monthly_Bill__c</fullName>
        <description>Average Monthly Electric Bill Estimated by Customer on Website Calculator</description>
        <inlineHelpText>Average Monthly Electric Bill Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator Average Monthly Bill ($)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_Home_Appreciation_Rate__c</fullName>
        <description>Home Appreciation Rate Estimated by Customer on Website Calculator</description>
        <inlineHelpText>Home Appreciation Rate Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator Home Appreciation Rate (%)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_Menu_Choice__c</fullName>
        <description>This field records which choice the calculator visitor chose at the end.</description>
        <label>Calculator Menu Choice</label>
        <picklist>
            <controllingField>Method_of_Contact__c</controllingField>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead (Questions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead (Gathering Info)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead (Financing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing (Short-Term)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing (Long-Term)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing (Lease)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified (Site)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified (Curious)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculator_Quote_URL__c</fullName>
        <description>Link to Website Calculator Quote That Generated This Lead</description>
        <inlineHelpText>Link to Website Calculator Quote That Generated This Lead</inlineHelpText>
        <label>Calculator Quote URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Calculator_Rate_Increase__c</fullName>
        <description>Rate Increase Estimated by Customer on Website Calculator</description>
        <inlineHelpText>Rate Increase Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator Rate Increase (%)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_Site_Quality__c</fullName>
        <description>Site Quality Estimated by Customer on Website Calculator</description>
        <inlineHelpText>Site Quality Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator Site Quality</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_System_Size__c</fullName>
        <description>System Size Estimated by Customer on Website Calculator</description>
        <inlineHelpText>System Size Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator System Size (W)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closability__c</fullName>
        <description>How likely can we close this deal?</description>
        <inlineHelpText>How likely can we close this deal?</inlineHelpText>
        <label>Closability</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Program__c</fullName>
        <label>Community Program</label>
        <picklist>
            <picklistValues>
                <fullName>Belmont Goes Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chancellor&apos;s Row</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord Solar Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPN College Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Solarize Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUNY/Pepsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairfield Energy Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucester Solar Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Energy Solar Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newtown Energy Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pikesville Solar Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Andover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Aquidneck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Avon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Bridgeport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Cheshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Frederick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Glastonbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Goshen Warwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Huntington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Lexington-Bedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Needham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Newtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Northern Dutchess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Plainfield Ashfield Buckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize RetroFit Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Saugerties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize SOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Somers-New Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Stamford</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Quote_Mentioned__c</fullName>
        <description>Did the customer mention a competitive quote?</description>
        <inlineHelpText>Did the customer mention a competitive quote?</inlineHelpText>
        <label>Competitive Quote Mentioned</label>
        <picklist>
            <picklistValues>
                <fullName>Mentioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Quote__c</fullName>
        <description>Does the customer have a competitive quote?</description>
        <inlineHelpText>Does the customer have a competitive quote?</inlineHelpText>
        <label>Competitive Quote</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Competitive Checkbox in Portal</description>
        <label>Competitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Who provided a competitive quote?</description>
        <inlineHelpText>Who provided a competitive quote?</inlineHelpText>
        <label>Competitors</label>
        <picklist>
            <controllingField>Competitive_Quote_Mentioned__c</controllingField>
            <picklistValues>
                <fullName>1BOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sungevity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verrango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Local Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Remote Solar Sales Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alteris/Real Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenspring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Liberty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_Location__c</fullName>
        <description>Confirmed Geolocation of Lead&apos;s Address</description>
        <label>Confirmed Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Contact_Detail__c</fullName>
        <description>User submitted field for self generated, referral, and other contact leads</description>
        <inlineHelpText>User submitted field for self generated, referral, and other contact leads</inlineHelpText>
        <label>Contact Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacted_Us_Back_Count__c</fullName>
        <formula>IF( ISPICKVAL(Status, &quot;Contacted Us Back&quot;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacted Us Back Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Hour__c</fullName>
        <formula>IF( IsConverted ,VALUE(MID(TEXT( LastModifiedDate -0.2083333333333333),12,2)),NULL)</formula>
        <label>Converted Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <picklist>
            <picklistValues>
                <fullName>CONNECTICUT =&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairfield CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hartford CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litchfield CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middlesex CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Haven CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New London CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tolland CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windham CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISTRICT OF COLUMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE =&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Castle DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sussex DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARYLAND =&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegany MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Arundel MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore City MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calvert MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caroline MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carroll MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cecil MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dorchester MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frederick MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garrett MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harford MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Howard MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent MD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <formula>VALUE(MID(TEXT(CreatedDate-0.2083333333333333),12,2))</formula>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Range__c</fullName>
        <description>What Credit Score Range Does the Customer Believe They Have?</description>
        <inlineHelpText>What Credit Score Range Does the Customer Believe They Have?</inlineHelpText>
        <label>Credit Score Range</label>
        <picklist>
            <picklistValues>
                <fullName>Above 700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close (680-700)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor (&lt; 680)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 720</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700-720</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>680-700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 680</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know/not good</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Score_over_680__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Score over 680</description>
        <label>Credit Score over 680</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Company_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Company Office</label>
        <referenceTo>Office_Location__c</referenceTo>
        <relationshipLabel>Leads (Current Company Office)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Has_Constant_On_Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the Customer Have Constant On Internet Connection (Comcast, FIOS, DSL, etc)?</description>
        <inlineHelpText>Does the Customer Have Constant On Internet Connection (Comcast, FIOS, DSL, etc)?</inlineHelpText>
        <label>Customer Has Constant On Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Timeframe__c</fullName>
        <label>Customer Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Deciding Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actively Researching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gathering Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Curious</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Timeline__c</fullName>
        <description>What is the Customer&apos;s Purchase Timeline?</description>
        <inlineHelpText>What is the Customer&apos;s Purchase Timeline?</inlineHelpText>
        <label>Customer Timeline</label>
        <picklist>
            <picklistValues>
                <fullName>Ready To Install Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready To Install This Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researching Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Curious, Not Going Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_Rep_ID__c</fullName>
        <description>D2D  Vendor Rep ID</description>
        <inlineHelpText>D2D  Vendor Rep ID</inlineHelpText>
        <label>D2D Rep ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D2D_Site_Quality__c</fullName>
        <label>D2D Site Quality</label>
        <picklist>
            <controllingField>D2D_State__c</controllingField>
            <picklistValues>
                <fullName>1050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1600</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_State__c</fullName>
        <label>D2D State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_System_Size__c</fullName>
        <label>D2D System Size</label>
        <picklist>
            <controllingField>D2D_State__c</controllingField>
            <picklistValues>
                <fullName>16 Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 Panel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_Upload_Id__c</fullName>
        <label>D2D Upload Id</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do NOT solicit through mail services.</description>
        <inlineHelpText>Do NOT solicit through mail services.</inlineHelpText>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do NOT solicit at the door.</description>
        <inlineHelpText>Do NOT solicit at the door.</inlineHelpText>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do NOT solicit through text messaging.</description>
        <inlineHelpText>Do NOT solicit through text messaging.</inlineHelpText>
        <label>Do Not Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_S_W_Facing_Roof__c</fullName>
        <defaultValue>false</defaultValue>
        <description>E-S-W Facing Roof</description>
        <label>E-S-W Facing Roof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscribed to Marketing Email?</description>
        <inlineHelpText>Subscribed to Marketing Email?</inlineHelpText>
        <label>Subscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_April_kWh__c</fullName>
        <description>Estimated April kWh</description>
        <inlineHelpText>Estimated April kWh</inlineHelpText>
        <label>Estimated April kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_August_kWh__c</fullName>
        <description>Estimated August kWh</description>
        <inlineHelpText>Estimated August kWh</inlineHelpText>
        <label>Estimated August kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Credit_Score__c</fullName>
        <description>Customer&apos;s Best Guess At Their Credit Score (300-850)</description>
        <inlineHelpText>Customer&apos;s Best Guess At Their Credit Score (300-850)</inlineHelpText>
        <label>Estimated Credit Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_December_kWh__c</fullName>
        <description>Estimated December kWh</description>
        <inlineHelpText>Estimated December kWh</inlineHelpText>
        <label>Estimated December kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_February_kWh__c</fullName>
        <description>Estimated February kWh</description>
        <inlineHelpText>Estimated February kWh</inlineHelpText>
        <label>Estimated February kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_January_kWh__c</fullName>
        <description>Estimated January kWh</description>
        <inlineHelpText>Estimated January kWh</inlineHelpText>
        <label>Estimated January kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_July_kWh__c</fullName>
        <description>Estimated July kWh</description>
        <inlineHelpText>Estimated July kWh</inlineHelpText>
        <label>Estimated July kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_June_kWh__c</fullName>
        <description>Estimated June kWh</description>
        <inlineHelpText>Estimated June kWh</inlineHelpText>
        <label>Estimated June kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_March_kWh__c</fullName>
        <description>Estimated March kWh</description>
        <inlineHelpText>Estimated March kWh</inlineHelpText>
        <label>Estimated March kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_May_kWh__c</fullName>
        <description>Estimated May kWh</description>
        <inlineHelpText>Estimated May kWh</inlineHelpText>
        <label>Estimated May kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_November_kWh__c</fullName>
        <description>Estimated November kWh</description>
        <inlineHelpText>Estimated November kWh</inlineHelpText>
        <label>Estimated November kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_October_kWh__c</fullName>
        <description>Estimated October kWh</description>
        <inlineHelpText>Estimated October kWh</inlineHelpText>
        <label>Estimated October kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>